--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "shopify-buy": "^2.16.1"
   },
   "devDependencies": {
