--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "shopify-buy": "^2.16.1"
+    "shopify-buy": "^2.16.1",
+    "swiper": "^8.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
