--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/material": "^5.9.0",
+    "@mui/material": "^5.9.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-material-ui-carousel": "^3.4.2",
     "shopify-buy": "^2.16.1",
     "swiper": "^8.3.1"
   },
