--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-slick": "^0.29.0",
     "shopify-buy": "^2.16.1",
     "swiper": "^8.3.1"
   },
